--- a/packages/apputils/style/styling.css
+++ b/packages/apputils/style/styling.css
@@ -14,7 +14,7 @@ button.jp-mod-styled {
   text-align: center;
   line-height: 32px;
   height: 32px;
-  padding: 0px 8px;
+  padding: 0px 12px;
   letter-spacing: .8px;
   outline: none;
   appearance: none;
